# kaggle

./: .gitignore  README.md  kaggle.code-workspace  pyproject.toml
playground-series-s6e5/: pyproject.toml
playground-series-s6e5/src/: main.py  prediction.py
playground-series-s6e6/: pyproject.toml
playground-series-s6e6/src/: main.py  prediction.py
playground-series-s6e7/: pyproject.toml
playground-series-s6e7/src/: label.py  main.py  prediction.py
titanic/: pyproject.toml
titanic/src/: database.py  main.py  predict.py
tools/: download.sh  submission.sh
