[project]
name = "my_kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "kaggle==1.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "titanic",
    "playground-series-s6e5",
    "tools",
]
