[project]
name = "my_kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "kaggle==1.8.4",
    "duckdb>=1.5.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "xgboost>=3.2.0",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
]

[tool.uv.workspace]
members = [
    "titanic",
    "playground-series-s6e5",
    "playground-series-s6e6",
    "rogii-wellbore-geology-prediction",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
